--- a/301_350.md
+++ b/301_350.md
@@ -958,7 +958,318 @@ Why are the other answers wrong?
 Therefore, using AWS KMS to encrypt RDS instances is the correct solution.
 </details>
 
+<details>
+  <summary>Question 331</summary>
 
+A company must migrate 20 TB of data from a data center to the AWS Cloud within 30 days. The company's network bandwidth is limited to 15 Mbps and cannot exceed 70% utilization. What should a solutions architect do to meet these requirements?
+
+-   [ ] A. Use AWS Snowball.
+-   [ ] B. Use AWS DataSync.
+-   [ ] C. Use a secure VPN connection.
+-   [ ] D. Use Amazon S3 Transfer Acceleration.
+</details>
+<details>
+  <summary>Answer</summary>
+
+-   [ ] A. Use AWS Snowball.
+
+Why these are the correct answers:
+
+A. Use AWS Snowball.
+
+-   [ ] AWS Snowball is a physical data transport solution that uses devices to transfer large amounts of data into and out of AWS. [cite: 326, 327, 328]
+-   [ ] Given the limited network bandwidth and the large amount of data, Snowball is more efficient than transferring data over the network. [cite: 326, 327, 328]
+-   [ ] It can meet the 30-day migration timeframe, avoiding network congestion. [cite: 326, 327, 328]
+
+Why are the other answers wrong?
+
+-   [ ] B. AWS DataSync is a data transfer service, but transferring 20 TB over a 15 Mbps connection within 30 days is impractical. [cite: 326, 327, 328, 40, 41]
+-   [ ] C. A secure VPN connection is also limited by the network bandwidth and is too slow for transferring such a large dataset in the given timeframe. [cite: 326, 327, 328]
+-   [ ] D. Amazon S3 Transfer Acceleration optimizes network transfers to S3 but is still constrained by the available bandwidth, making it unsuitable for this large migration. [cite: 94, 95, 96, 97]
+
+Therefore, AWS Snowball is the most appropriate solution for this scenario.
+</details>
+<details>
+  <summary>Question 332</summary>
+
+A company needs to provide its employees with secure access to confidential and sensitive files. The company wants to ensure that the files can be accessed only by authorized users. The files must be downloaded securely to the employees' devices. The files are stored in an on-premises Windows file server. However, due to an increase in remote usage, the file server is running out of capacity. Which solution will meet these requirements?
+
+-   [ ] A. Migrate the file server to an Amazon EC2 instance in a public subnet. Configure the security group to limit inbound traffic to the employees' IP addresses.
+-   [ ] B. Migrate the files to an Amazon FSx for Windows File Server file system. Integrate the Amazon FSx file system with the on-premises Active Directory. Configure AWS Client VPN.
+-   [ ] C. Migrate the files to Amazon S3, and create a private VPC endpoint. Create a signed URL to allow download.
+-   [ ] D. Migrate the files to Amazon S3, and create a public VPC endpoint. Allow employees to sign on with AWS IAM Identity Center (AWS Single Sign-On).
+</details>
+<details>
+  <summary>Answer</summary>
+
+-   [ ] B. Migrate the files to an Amazon FSx for Windows File Server file system. Integrate the Amazon FSx file system with the on-premises Active Directory. Configure AWS Client VPN.
+
+Why these are the correct answers:
+
+B. Migrate the files to an Amazon FSx for Windows File Server file system. Integrate the Amazon FSx file system with the on-premises Active Directory. Configure AWS Client VPN.
+
+-   [ ] Amazon FSx for Windows File Server provides a fully managed Windows file server in the AWS Cloud. [cite: 336, 337, 48, 49]
+-   [ ] Integrating with on-premises Active Directory ensures that only authorized users can access the files. [cite: 336, 337, 355, 356]
+-   [ ] AWS Client VPN provides secure access to the file system, allowing employees to download files securely. [cite: 336, 337]
+-   [ ] This solution addresses the capacity issue and meets the security requirements. [cite: 331, 332, 333, 334]
+
+Why are the other answers wrong?
+
+-   [ ] A. Migrating the file server to an EC2 instance in a public subnet exposes it to the internet and managing security groups is less secure than using a VPN. [cite: 334, 335, 336, 337]
+-   [ ] C. Using S3 with a private VPC endpoint requires changes to how employees access and download files, and signed URLs add complexity. [cite: 338, 339, 340, 39, 40]
+-   [ ] D. A public VPC endpoint is less secure, and relying solely on IAM Identity Center does not provide the same level of secure file access as a VPN. [cite: 338, 339, 340]
+
+Therefore, using Amazon FSx for Windows File Server with Active Directory and AWS Client VPN is the most suitable solution.
+</details>
+<details>
+  <summary>Question 333</summary>
+
+A company's application runs on Amazon EC2 instances behind an Application Load Balancer (ALB). The instances run in an Amazon EC2 Auto Scaling group across multiple Availability Zones. On the first day of every month at midnight, the application becomes much slower when the month-end financial calculation batch runs. This causes the CPU utilization of the EC2 instances to immediately peak to 100%, which disrupts the application. What should a solutions architect recommend to ensure the application is able to handle the workload and avoid downtime?
+
+-   [ ] A. Configure an Amazon CloudFront distribution in front of the ALB.
+-   [ ] B. Configure an EC2 Auto Scaling simple scaling policy based on CPU utilization.
+-   [ ] C. Configure an EC2 Auto Scaling scheduled scaling policy based on the monthly schedule.
+-   [ ] D. Configure Amazon ElastiCache to remove some of the workload from the EC2 instances.
+</details>
+<details>
+  <summary>Answer</summary>
+
+-   [ ] C. Configure an EC2 Auto Scaling scheduled scaling policy based on the monthly schedule.
+
+Why these are the correct answers:
+
+C. Configure an EC2 Auto Scaling scheduled scaling policy based on the monthly schedule.
+
+-   [ ] Scheduled scaling allows the Auto Scaling group to increase capacity in anticipation of the known monthly peak load. [cite: 343, 344, 345, 346, 347, 348, 349, 350, 351]
+-   [ ] This ensures that additional EC2 instances are available before the CPU utilization spikes, preventing downtime. [cite: 343, 344, 345, 346, 347, 348, 349, 350, 351]
+
+Why are the other answers wrong?
+
+-   [ ] A. CloudFront is for caching and content delivery, not for scaling EC2 instances to handle increased CPU load. [cite: 297, 298, 299, 300, 301, 302, 303, 304, 347, 348, 349, 350, 351]
+-   [ ] B. Simple scaling policies react to CPU utilization, which means instances are added *after* the CPU spikes and the application slows down. [cite: 343, 344, 345, 346, 347, 348, 349, 350, 351]
+-   [ ] D. ElastiCache improves performance by caching data, but it does not directly address the need to scale EC2 instances for increased CPU load during batch processing. [cite: 396, 397, 398, 399, 400, 401, 350, 351]
+
+Therefore, a scheduled scaling policy is the most effective solution to handle predictable monthly spikes.
+</details>
+<details>
+  <summary>Question 334</summary>
+
+A company wants to give a customer the ability to use on-premises Microsoft Active Directory to download files that are stored in Amazon S3. The customer's application uses an SFTP client to download the files. Which solution will meet these requirements with the LEAST operational overhead and no changes to the customer's application?
+
+-   [ ] A. Set up AWS Transfer Family with SFTP for Amazon S3. Configure integrated Active Directory authentication.
+-   [ ] B. Set up AWS Database Migration Service (AWS DMS) to synchronize the on-premises client with Amazon S3. Configure integrated Active Directory authentication.
+-   [ ] C. Set up AWS DataSync to synchronize between the on-premises location and the S3 location by using AWS IAM Identity Center (AWS Single Sign-On).
+-   [ ] D. Set up a Windows Amazon EC2 instance with SFTP to connect the on-premises client with Amazon S3. Integrate AWS Identity and Access Management (IAM).
+</details>
+<details>
+  <summary>Answer</summary>
+
+-   [ ] A. Set up AWS Transfer Family with SFTP for Amazon S3. Configure integrated Active Directory authentication.
+
+Why these are the correct answers:
+
+A. Set up AWS Transfer Family with SFTP for Amazon S3. Configure integrated Active Directory authentication.
+
+-   [ ] AWS Transfer Family provides a fully managed SFTP service that allows users to securely transfer files into and out of Amazon S3. [cite: 355, 356]
+-   [ ] It supports integration with on-premises Active Directory, enabling users to authenticate with their existing credentials. [cite: 355, 356, 336, 337]
+-   [ ] This solution requires minimal operational overhead and no changes to the customer's application. [cite: 352, 353, 354, 355, 356]
+
+Why are the other answers wrong?
+
+-   [ ] B. AWS DMS is for database migration, not for file transfers, and is not suitable for SFTP access. [cite: 42, 356, 357]
+-   [ ] C. AWS DataSync is for large-scale data transfers and does not directly provide SFTP access with Active Directory integration. [cite: 40, 41, 356, 357]
+-   [ ] D. Setting up an EC2 instance with SFTP requires more operational overhead and managing authentication with IAM is more complex than using AWS Transfer Family. [cite: 46, 47, 48, 49, 358, 359]
+
+Therefore, AWS Transfer Family is the most appropriate solution for secure SFTP access with Active Directory integration.
+</details>
+<details>
+  <summary>Question 335</summary>
+
+A company is experiencing sudden increases in demand. The company needs to provision large Amazon EC2 instances from an Amazon Machine Image (AMI). The instances will run in an Auto Scaling group. The company needs a solution that provides minimum initialization latency to meet the demand. Which solution meets these requirements?
+
+-   [ ] A. Use the aws ec2 register-image command to create an AMI from a snapshot. Use AWS Step Functions to replace the AMI in the Auto Scaling group.
+-   [ ] B. Enable Amazon Elastic Block Store (Amazon EBS) fast snapshot restore on a snapshot. Provision an AMI by using the snapshot. Replace the AMI in the Auto Scaling group with the new AMI.
+-   [ ] C. Enable AMI creation and define lifecycle rules in Amazon Data Lifecycle Manager (Amazon DLM). Create an AWS Lambda function that modifies the AMI in the Auto Scaling group.
+-   [ ] D. Use Amazon EventBridge to invoke AWS Backup lifecycle policies that provision AMIs. Configure Auto Scaling group capacity limits as an event source in EventBridge.
+</details>
+<details>
+  <summary>Answer</summary>
+
+-   [ ] B. Enable Amazon Elastic Block Store (Amazon EBS) fast snapshot restore on a snapshot. Provision an AMI by using the snapshot. Replace the AMI in the Auto Scaling group with the new AMI.
+
+Why these are the correct answers:
+
+B. Enable Amazon Elastic Block Store (Amazon EBS) fast snapshot restore on a snapshot. Provision an AMI by using the snapshot. Replace the AMI in the Auto Scaling group with the new AMI.
+
+-   [ ] EBS fast snapshot restore allows volumes created from snapshots to be fully initialized at creation, minimizing latency. [cite: 365, 366, 367]
+-   [ ] Using this snapshot to create an AMI ensures that instances launched from that AMI also benefit from fast initialization. [cite: 365, 366, 367]
+-   [ ] Replacing the AMI in the Auto Scaling group ensures that new instances are launched quickly to meet demand. [cite: 360, 361, 362, 363, 364, 365, 366, 367]
+
+Why are the other answers wrong?
+
+-   [ ] A. Using the `aws ec2 register-image` command and Step Functions does not provide the fast initialization of EBS volumes. [cite: 363, 364, 365, 366, 367]
+-   [ ] C. Amazon DLM manages EBS snapshots and AMIs but does not provide the fast snapshot restore capability. Using a Lambda function adds complexity. [cite: 367, 368, 369, 370]
+-   [ ] D. AWS Backup is for data backup and restore, not for optimizing instance initialization latency. EventBridge is for event-driven tasks, not for fast instance provisioning. [cite: 125, 126, 127, 369, 370]
+
+Therefore, EBS fast snapshot restore is the most effective solution for minimizing initialization latency.
+</details>
+<details>
+  <summary>Question 336</summary>
+
+A company hosts a multi-tier web application that uses an Amazon Aurora MySQL DB cluster for storage. The application tier is hosted on Amazon EC2 instances. The company's IT security guidelines mandate that the database credentials be encrypted and rotated every 14 days. What should a solutions architect do to meet this requirement with the LEAST operational effort?
+
+-   [ ] A. Create a new AWS Key Management Service (AWS KMS) encryption key. Use AWS Secrets Manager to create a new secret that uses the KMS key with the appropriate credentials. Associate the secret with the Aurora DB cluster. Configure a custom rotation period of 14 days.
+-   [ ] B. Create two parameters in AWS Systems Manager Parameter Store: one for the user name as a string parameter and one that uses the SecureString type for the password. Select AWS Key Management Service (AWS KMS) encryption for the password parameter, and load these parameters in the application tier. Implement an AWS Lambda function that rotates the password every 14 days.
+-   [ ] C. Store a file that contains the credentials in an AWS Key Management Service (AWS KMS) encrypted Amazon Elastic File System (Amazon EFS) file system. Mount the EFS file system in all EC2 instances of the application tier. Restrict the access to the file on the file system so that the application can read the file and that only super users can modify the file. Implement an AWS Lambda function that rotates the key in Aurora every 14 days and writes new credentials into the file.
+-   [ ] D. Store a file that contains the credentials in an AWS Key Management Service (AWS KMS) encrypted Amazon S3 bucket that the application uses to load the credentials. Download the file to the application regularly to ensure that the correct credentials are used. Implement an AWS Lambda function that rotates the Aurora credentials every 14 days and uploads these credentials to the file in the S3 bucket.
+</details>
+<details>
+  <summary>Answer</summary>
+
+-   [ ] A. Create a new AWS Key Management Service (AWS KMS) encryption key. Use AWS Secrets Manager to create a new secret that uses the KMS key with the appropriate credentials. Associate the secret with the Aurora DB cluster. Configure a custom rotation period of 14 days.
+
+Why these are the correct answers:
+
+A. Create a new AWS Key Management Service (AWS KMS) encryption key. Use AWS Secrets Manager to create a new secret that uses the KMS key with the appropriate credentials. Associate the secret with the Aurora DB cluster. Configure a custom rotation period of 14 days.
+
+-   [ ] AWS Secrets Manager is designed to manage database credentials securely. [cite: 418, 419, 420, 421, 422, 423, 374, 375, 376]
+-   [ ] It integrates with AWS KMS for encryption and supports automatic rotation of credentials. [cite: 418, 419, 420, 421, 422, 423, 374, 375, 376]
+-   [ ] Configuring a 14-day rotation period meets the requirement with minimal operational effort. [cite: 371, 372, 373, 374, 375, 376, 383, 384, 385, 386]
+
+Why are the other answers wrong?
+
+-   [ ] B. Parameter Store is for storing configuration data, not specifically for rotating database credentials. Implementing a Lambda function adds operational overhead. [cite: 377, 378, 379, 380, 381, 382, 383]
+-   [ ] C. Storing credentials in EFS and using a Lambda function to rotate them is more complex and adds operational overhead compared to Secrets Manager. [cite: 377, 378, 379, 380, 381, 382, 383]
+-   [ ] D. Storing credentials in S3 and downloading them regularly is less secure and adds more operational overhead than using Secrets Manager. [cite: 383, 384, 385, 386, 387]
+
+Therefore, AWS Secrets Manager is the most efficient and secure solution for rotating database credentials.
+</details>
+<details>
+  <summary>Question 337</summary>
+
+A company has deployed a web application on AWS. The company hosts the backend database on Amazon RDS for MySQL with a primary DB instance and five read replicas to support scaling needs. The read replicas must lag no more than 1 second behind the primary DB instance. The database routinely runs scheduled stored procedures. As traffic on the website increases, the replicas experience additional lag during periods of peak load. A solutions architect must reduce the replication lag as much as possible. The solutions architect must minimize changes to the application code and must minimize ongoing operational overhead. Which solution will meet these requirements?
+
+-   [ ] A. Migrate the database to Amazon Aurora MySQL. Replace the read replicas with Aurora Replicas, and configure Aurora Auto Scaling. Replace the stored procedures with Aurora MySQL native functions.
+-   [ ] B. Deploy an Amazon ElastiCache for Redis cluster in front of the database. Modify the application to check the cache before the application queries the database. Replace the stored procedures with AWS Lambda functions.
+-   [ ] C. Migrate the database to a MySQL database that runs on Amazon EC2 instances. Choose large, compute optimized EC2 instances for all replica nodes. Maintain the stored procedures on the EC2 instances.
+-   [ ] D. Migrate the database to Amazon DynamoDB. Provision a large number of read capacity units (RCUs) to support the required throughput, and configure on-demand capacity scaling. Replace the stored procedures with DynamoDB streams.
+</details>
+<details>
+  <summary>Answer</summary>
+
+-   [ ] A. Migrate the database to Amazon Aurora MySQL. Replace the read replicas with Aurora Replicas, and configure Aurora Auto Scaling. Replace the stored procedures with Aurora MySQL native functions.
+
+Why these are the correct answers:
+
+A. Migrate the database to Amazon Aurora MySQL. Replace the read replicas with Aurora Replicas, and configure Aurora Auto Scaling. Replace the stored procedures with Aurora MySQL native functions.
+
+-   [ ] Amazon Aurora MySQL is designed to minimize replication lag. [cite: 394, 395, 396]
+-   [ ] Aurora Replicas provide low replication lag compared to standard MySQL read replicas. [cite: 394, 395, 396]
+-   [ ] Aurora Auto Scaling automatically adjusts database capacity to handle increased load. [cite: 394, 395, 396]
+-   [ ] Replacing stored procedures with Aurora MySQL native functions can improve performance. [cite: 394, 395, 396]
+-   [ ] This solution minimizes application code changes and operational overhead. [cite: 388, 389, 390, 391, 392, 393, 394, 395, 396]
+
+Why are the other answers wrong?
+
+-   [ ] B. ElastiCache reduces database load but does not directly address replication lag. Modifying the application to use the cache adds complexity. [cite: 396, 397, 398, 399, 400, 401]
+-   [ ] C. Migrating to MySQL on EC2 instances increases operational overhead and does not guarantee reduced replication lag. [cite: 396, 397, 398, 399, 400, 401]
+-   [ ] D. DynamoDB is a NoSQL database and requires significant application code changes. It is not suitable for replacing a MySQL database. [cite: 396, 397, 398, 399, 400, 401]
+
+Therefore, migrating to Amazon Aurora MySQL is the most appropriate solution.
+</details>
+<details>
+  <summary>Question 338</summary>
+
+A solutions architect must create a disaster recovery (DR) plan for a high-volume software as a service (SaaS) platform. All data for the platform is stored in an Amazon Aurora MySQL DB cluster. The DR plan must replicate data to a secondary AWS Region. Which solution will meet these requirements MOST cost-effectively?
+
+-   [ ] A. Use MySQL binary log replication to an Aurora cluster in the secondary Region. Provision one DB instance for the Aurora cluster in the secondary Region.
+-   [ ] B. Set up an Aurora global database for the DB cluster. When setup is complete, remove the DB instance from the secondary Region.
+-   [ ] C. Use AWS Database Migration Service (AWS DMS) to continuously replicate data to an Aurora cluster in the secondary Region. Remove the DB instance from the secondary Region.
+-   [ ] D. Set up an Aurora global database for the DB cluster. Specify a minimum of one DB instance in the secondary Region.
+</details>
+<details>
+  <summary>Answer</summary>
+
+-   [ ] B. Set up an Aurora global database for the DB cluster. When setup is complete, remove the DB instance from the secondary Region.
+
+Why these are the correct answers:
+
+B. Set up an Aurora global database for the DB cluster. When setup is complete, remove the DB instance from the secondary Region.
+
+-   [ ] Aurora Global Database is designed for disaster recovery and replicates data with low latency to a secondary Region. [cite: 407, 408, 409, 410, 411, 412]
+-   [ ] By removing the DB instance in the secondary Region after setup, you minimize costs while still having the replication in place. [cite: 407, 408, 409, 410, 411, 412]
+-   [ ] This approach is cost-effective because you only incur the cost of storage and data transfer until a failover is needed. [cite: 402, 403, 404, 405, 406, 407, 408, 409, 410, 411, 412]
+
+Why are the other answers wrong?
+
+-   [ ] A. MySQL binary log replication is complex to set up and manage, and provisioning a DB instance incurs ongoing costs. [cite: 404, 405, 406, 407, 408, 409, 410, 411, 412]
+-   [ ] C. AWS DMS is for database migration, not efficient for continuous replication in a DR scenario, and also incurs costs for the replication instance. [cite: 409, 410, 411, 412]
+-   [ ] D. Keeping a DB instance running in the secondary Region increases costs, making it less cost-effective than removing it after setup. [cite: 409, 410, 411, 412]
+
+Therefore, using Aurora Global Database and removing the DB instance is the most cost-effective DR solution.
+</details>
+<details>
+  <summary>Question 339</summary>
+
+A company has a custom application with embedded credentials that retrieves information from an Amazon RDS MySQL DB instance. Management says the application must be made more secure with the least amount of programming effort. What should a solutions architect do to meet these requirements?
+
+-   [ ] A. Use AWS Key Management Service (AWS KMS) to create keys. Configure the application to load the database credentials from AWS KMS. Enable automatic key rotation.
+-   [ ] B. Create credentials on the RDS for MySQL database for the application user and store the credentials in AWS Secrets Manager. Configure the application to load the database credentials from Secrets Manager. Create an AWS Lambda function that rotates the credentials in Secret Manager.
+-   [ ] C. Create credentials on the RDS for MySQL database for the application user and store the credentials in AWS Secrets Manager. Configure the application to load the database credentials from Secrets Manager. Set up a credentials rotation schedule for the application user in the RDS for MySQL database using Secrets Manager.
+-   [ ] D. Create credentials on the RDS for MySQL database for the application user and store the credentials in AWS Systems Manager Parameter Store. Configure the application to load the database credentials from Parameter Store. Set up a credentials rotation schedule for the application user in the RDS for MySQL database using Parameter Store.
+</details>
+<details>
+  <summary>Answer</summary>
+
+-   [ ] C. Create credentials on the RDS for MySQL database for the application user and store the credentials in AWS Secrets Manager. Configure the application to load the database credentials from Secrets Manager. Set up a credentials rotation schedule for the application user in the RDS for MySQL database using Secrets Manager.
+
+Why these are the correct answers:
+
+C. Create credentials on the RDS for MySQL database for the application user and store the credentials in AWS Secrets Manager. Configure the application to load the database credentials from Secrets Manager. Set up a credentials rotation schedule for the application user in the RDS for MySQL database using Secrets Manager.
+
+-   [ ] AWS Secrets Manager is designed to store and manage database credentials securely. [cite: 418, 419, 420, 421, 422, 423]
+-   [ ] It allows for automatic rotation of credentials, enhancing security. [cite: 418, 419, 420, 421, 422, 423]
+-   [ ] This solution minimizes programming effort by using Secrets Manager's built-in rotation capabilities. [cite: 413, 414, 415, 416, 417, 418, 419, 420, 421, 422, 423]
+
+Why are the other answers wrong?
+
+-   [ ] A. Using AWS KMS to store database credentials requires more programming effort to retrieve and manage the credentials. [cite: 413, 414, 415, 416, 417, 418, 419, 420, 421, 422, 423]
+-   [ ] B. Using a Lambda function to rotate credentials adds complexity and operational overhead. [cite: 418, 419, 420, 421, 422, 423]
+-   [ ] D. AWS Systems Manager Parameter Store is for configuration data, not for secure storage and rotation of database credentials. [cite: 423, 424, 425, 426, 427]
+
+Therefore, AWS Secrets Manager is the most suitable solution for secure credential management and rotation.
+</details>
+<details>
+  <summary>Question 340</summary>
+
+A media company hosts its website on AWS. The website application's architecture includes a fleet of Amazon EC2 instances behind an Application Load Balancer (ALB) and a database that is hosted on Amazon Aurora. The company's cybersecurity team reports that the application is vulnerable to SQL injection. How should the company resolve this issue?
+
+-   [ ] A. Use AWS WAF in front of the ALB. Associate the appropriate web ACLs with AWS WAF.
+-   [ ] B. Create an ALB listener rule to reply to SQL injections with a fixed response.
+-   [ ] C. Subscribe to AWS Shield Advanced to block all SQL injection attempts automatically.
+-   [ ] D. Set up Amazon Inspector to block all SQL injection attempts automatically.
+</details>
+<details>
+  <summary>Answer</summary>
+
+-   [ ] A. Use AWS WAF in front of the ALB. Associate the appropriate web ACLs with AWS WAF.
+
+Why these are the correct answers:
+
+A. Use AWS WAF in front of the ALB. Associate the appropriate web ACLs with AWS WAF.
+
+-   [ ] AWS WAF (Web Application Firewall) is designed to protect web applications from common web exploits, including SQL injection. [cite: 430, 431, 432, 285, 286, 287, 288, 289]
+-   [ ] Web ACLs (Web Access Control Lists) contain rules that filter malicious web requests. [cite: 430, 431, 432, 285, 286, 287, 288, 289]
+-   [ ] Placing WAF in front of the ALB protects the EC2 instances and the Aurora database. [cite: 428, 429, 430, 431, 432]
+
+Why are the other answers wrong?
+
+-   [ ] B. ALB listener rules are for routing traffic, not for filtering SQL injection attacks. [cite: 430, 431, 432]
+-   [ ] C. AWS Shield Advanced protects against DDoS attacks, not SQL injection. [cite: 146, 147, 433]
+-   [ ] D. Amazon Inspector scans for vulnerabilities but does not actively block attacks. [cite: 309, 310, 311, 312, 313, 314, 315, 316, 434]
+
+Therefore, AWS WAF is the most appropriate service to mitigate SQL injection attacks.
+</details>
 
 
 
