--- a/401_450.md
+++ b/401_450.md
@@ -631,6 +631,160 @@ Why are the other answers wrong?
 Therefore, Amazon Aurora PostgreSQL Multi-AZ DB clusters with the reader endpoint are the most appropriate solution.
 </details>
 
+<details>
+  <summary>Question 421</summary>
+
+A company runs a highly available SFTP service.
+The SFTP service uses two Amazon EC2 Linux instances that run with elastic IP addresses to accept traffic from trusted IP sources on the internet.
+The SFTP service is backed by shared storage that is attached to the instances.
+User accounts are created and managed as Linux users in the SFTP servers.
+The company wants a serverless option that provides high IOPS performance and highly configurable security.
+The company also wants to maintain control over user permissions.
+
+Which solution will meet these requirements?
+
+- [ ] A. Create an encrypted Amazon Elastic Block Store (Amazon EBS) volume.
+Create an AWS Transfer Family SFTP service with a public endpoint that allows only trusted IP addresses.
+Attach the EBS volume to the SFTP service endpoint.
+Grant users access to the SFTP service.
+- [ ] B. Create an encrypted Amazon Elastic File System (Amazon EFS) volume.
+Create an AWS Transfer Family SFTP service with elastic IP addresses and a VPC endpoint that has internet-facing access.
+Attach a security group to the endpoint that allows only trusted IP addresses.
+Attach the EFS volume to the SFTP service endpoint.
+Grant users access to the SFTP service.
+- [ ] C. Create an Amazon S3 bucket with default encryption enabled.
+Create an AWS Transfer Family SFTP service with a public endpoint that allows only trusted IP addresses.
+Attach the S3 bucket to the SFTP service endpoint.
+Grant users access to the SFTP service.
+- [ ] D. Create an Amazon S3 bucket with default encryption enabled.
+Create an AWS Transfer Family SFTP service with a VPC endpoint that has internal access in a private subnet.
+Attach a security group that allows only trusted IP addresses.
+Attach the S3 bucket to the SFTP service endpoint.
+Grant users access to the SFTP service.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] B. Create an encrypted Amazon Elastic File System (Amazon EFS) volume.
+Create an AWS Transfer Family SFTP service with elastic IP addresses and a VPC endpoint that has internet-facing access.
+Attach a security group to the endpoint that allows only trusted IP addresses.
+Attach the EFS volume to the SFTP service endpoint.
+Grant users access to the SFTP service.
+
+Why these are the correct answers:
+
+B. Create an encrypted Amazon Elastic File System (Amazon EFS) volume.
+Create an AWS Transfer Family SFTP service with elastic IP addresses and a VPC endpoint that has internet-facing access.
+Attach a security group to the endpoint that allows only trusted IP addresses.
+Attach the EFS volume to the SFTP service endpoint.
+Grant users access to the SFTP service.
+
+- [ ] AWS Transfer Family provides a serverless SFTP service.
+- [ ] Amazon EFS provides shared file storage with high IOPS performance.
+- [ ] Using a VPC endpoint with a security group allows for highly configurable security by controlling access.
+- [ ] EFS allows for maintaining control over user permissions.
+
+Why are the other answers wrong?
+
+- [ ] A. Using EBS volumes with AWS Transfer Family is not a valid configuration, as EBS is block storage and not designed for shared file access in this context.
+- [ ] C and D. Amazon S3 is object storage, not a file system, and while Transfer Family can use S3, it doesn't provide the same file system semantics or performance as EFS for an SFTP service requiring high IOPS.
+
+Therefore, Option B is the most suitable solution as it leverages AWS Transfer Family for serverless SFTP, EFS for shared storage with high IOPS, and VPC endpoints with security groups for secure access control.
+
+</details>
+
+<details>
+  <summary>Question 422</summary>
+
+A company is developing a new machine learning (ML) model solution on AWS.
+The models are developed as independent microservices that fetch approximately 1 GB of model data from Amazon S3 at startup and load the data into memory.
+Users access the models through an asynchronous API.
+Users can send a request or a batch of requests and specify where the results should be sent.
+The company provides models to hundreds of users.
+The usage patterns for the models are irregular.
+Some models could be unused for days or weeks.
+Other models could receive batches of thousands of requests at a time.
+Which design should a solutions architect recommend to meet these requirements?
+
+- [ ] A. Direct the requests from the API to a Network Load Balancer (NLB).
+Deploy the models as AWS Lambda functions that are invoked by the NLB.
+- [ ] B. Direct the requests from the API to an Application Load Balancer (ALB).
+Deploy the models as Amazon Elastic Container Service (Amazon ECS) services that read from an Amazon Simple Queue Service (Amazon SQS) queue.
+Use AWS App Mesh to scale the instances of the ECS cluster based on the SQS queue size.
+- [ ] C. Direct the requests from the API into an Amazon Simple Queue Service (Amazon SQS) queue.
+Deploy the models as AWS Lambda functions that are invoked by SQS events.
+Use AWS Auto Scaling to increase the number of vCPUs for the Lambda functions based on the SQS queue size.
+- [ ] D. Direct the requests from the API into an Amazon Simple Queue Service (Amazon SQS) queue.
+Deploy the models as Amazon Elastic Container Service (Amazon ECS) services that read from the queue.
+Enable AWS Auto Scaling on Amazon ECS for both the cluster and copies of the service based on the queue size.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] D. Direct the requests from the API into an Amazon Simple Queue Service (Amazon SQS) queue.
+Deploy the models as Amazon Elastic Container Service (Amazon ECS) services that read from the queue.
+Enable AWS Auto Scaling on Amazon ECS for both the cluster and copies of the service based on the queue size.
+
+Why these are the correct answers:
+
+D. Direct the requests from the API into an Amazon Simple Queue Service (Amazon SQS) queue.
+Deploy the models as Amazon Elastic Container Service (Amazon ECS) services that read from the queue.
+Enable AWS Auto Scaling on Amazon ECS for both the cluster and copies of the service based on the queue size.
+
+- [ ] Amazon SQS helps decouple the API requests from the model processing, accommodating irregular usage patterns.
+- [ ] Amazon ECS allows deploying the models as scalable microservices.
+- [ ] AWS Auto Scaling on ECS ensures that the number of service instances adjusts dynamically based on the queue load, optimizing resource utilization and cost.
+
+Why are the other answers wrong?
+
+- [ ] A. Lambda functions have limitations on memory and execution time, and loading 1GB of model data might exceed those limits. NLB is for load balancing traffic, not for invoking Lambda functions directly in this manner.
+- [ ] B. While ECS with App Mesh can scale, it adds complexity compared to using ECS with Auto Scaling directly. App Mesh is more suitable for complex microservice architectures with many inter-service communications.
+- [ ] C. Lambda functions are not designed to have their vCPU count scaled; they scale by increasing the number of concurrent executions. Loading 1GB of model data into Lambda for each invocation can lead to performance and cost inefficiencies.
+
+Therefore, Option D provides the most scalable, cost-effective, and operationally efficient solution for handling the described machine learning model deployment scenario.
+
+</details>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
