--- a/401_450.md
+++ b/401_450.md
@@ -749,10 +749,77 @@ Therefore, Option D provides the most scalable, cost-effective, and operationall
 
 </details>
 
+<details>
+  <summary>Question 423</summary>
 
+A solutions architect wants to use the following JSON text as an identity-based policy to grant specific permissions:
 
+```json
+{
+  "Version": "2012-10-17",
+  "Statement": [
+    {
+      "Sid": "1",
+      "Effect": "Allow",
+      "Action": [
+        "ssm:ListDocuments",
+        "ssm:GetDocument"
+      ],
+      "Resource": "*",
+      "Condition": {
+        "StringEquals": {
+          "ec2:Region": "us-east-1"
+        }
+      }
+    },
+    {
+      "Sid": "2",
+      "Effect": "Deny",
+      "Action": [
+        "ec2:StopInstances",
+        "ec2:TerminateInstances"
+      ],
+      "Resource": "*",
+      "Condition": {
+        "BoolIfExists": {
+          "aws:MultiFactorAuthPresent": "false"
+        }
+      }
+    }
+  ]
+}
+```
 
+Which IAM principals can the solutions architect attach this policy to? (Choose two.)
 
+- [ ] A. Role
+- [ ] B. Group
+- [ ] C. Organization
+- [ ] D. Amazon Elastic Container Service (Amazon ECS) resource
+- [ ] E. Amazon EC2 resource
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] A. Role
+- [ ] B. Group
+
+Why these are the correct answers:
+
+- [ ] IAM policies are designed to be attached to IAM principals, which include users, groups, and roles.
+- [ ] Roles are used to grant permissions to AWS services or other AWS accounts.
+- [ ] Groups are used to manage permissions for multiple IAM users.
+
+Why are the other answers wrong?
+
+- [ ] C. Organization: Policies that apply at the organization level are Service Control Policies (SCPs), not IAM policies.
+- [ ] D and E. Amazon ECS resources and Amazon EC2 resources are not IAM principals to which identity-based policies are attached. Instead, roles can be assumed by these resources to gain permissions.
+
+Therefore, Options A and B are the correct choices as IAM policies can be directly attached to IAM roles and groups.
+
+</details>
 
 
 
